# profile_parse_poc

./: Cargo.toml
profiles/_meta/: person.toml  profile_attribute.toml  tag.toml
src/: main.rs
