[package]
name = "toml_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
convert_case = "0.6.0"
glob = "0.3.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_repr = "0.1.19"
toml = "0.8.12"
uuid = { version = "1.8.0", features = ["serde"] }

[profile.release]
lto = true

